[project]
name = "agent-tools"
version = "0.1.0"
description = "Outils fournis pour le TP final LangGraph — search_docs et run_python"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "sentence-transformers>=3.0",
    "bm25s>=0.2",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_tools*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
